# dcmt64

./: AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README-JP.md  README.md  configure.ac
src/: .gitignore  Makefile.am  Makefile.mpi  MixedSequence.hpp  best_search.cpp  calc_equidist.cpp  dcmt64.cpp  dcmt64mpi.cpp  debug_tempering.cpp  debug_tempering.id1.txt  kdist.awk  mpicontrol.hpp  mt64Rec1Search.hpp  mt64Rec2Search.hpp  mt64Search.hpp  options.cpp  options.h  options.hpp  search.cpp  search.h
tex/: dcmt64-rep.tex  mt64-kdist.ods  mt64-orig-params.txt  sfmt-kanren.bib
